Deployment/kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loyalty-prod
  labels:
    name: loyalty-prod
